# URL-Shortener

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 35c93f37a300_init.py
app/api/: dependencies.py  url_router.py
app/api/routers/: url_router.py
app/api/schemas/: request_schema.py  url_schema.py
app/commands/: scheduler.py
app/db/: session.py
app/models/: __init__.py  base.py  url.py
app/repositories/: url_repository.py
app/schemas/: url_schema.py
app/services/: setting.py  url_service.py
app/tasks/: url_tasks.py
app/utils/: short_code_generator.py  validator.py
