[project]
name = "users"
version = "1"
description = ""
authors = [
    {name = "FatemehKeshavarzi",email = "fatemeh.kesha98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
